# ImageGuidedNav

./: .gitignore  07MRI007_CodeDesign_Week2.pptx  7MRI0070_HardConstraints_Week3_part2.pptx  7MRI0070_ImageCoordinateFrames.pptx  7MRI0070_Test Driven Development (TDD)_Week3.pptx  7MRI0700_CoordinateFrames_Week7.pptx  CommmunicationsProtocol_Week4_part1.pptx  CommmunicationsProtocol_Week5Pt2.pptx  FeedbackControl_Week8.pptx  FeedkbackControllersROS_Week8.pptx  Git_Week2.pptx  HelloROS_Week7.docx  README.md  Virtual Machine SetUp_Week7.docx
robot_control/: Component3_1.stl  Component6_1.stl  Component7_1.stl  Component8_1.stl  Registered_Brain.stl  Segment_1.stl  package.xml  r_Cortex.stl  setup.py
robot_control/Robotic_description/: CMakeLists.txt  package.xml
robot_control/Robotic_description/launch/: controller.launch  display.launch
robot_control/Robotic_description/meshes/: Component2_1.stl  Component3_1.stl  Component4_1.stl  Component5_1.stl  Component6_1.stl  Component7_1.stl  Component8_1.stl  Component8_Mirror__1.stl  base_link.stl
robot_control/Robotic_description/urdf/: Robotic.gazebo  Robotic.xacro  materials.xacro
robot_control/launch/: display.launch.py  display_with_gui.launch.py  gazebo.launch  system.launch.py
robot_control/meshes/: Component2_1.stl  Component3_1.stl  Component4_1.stl  Component5_1.stl  Component6_1.stl  Component7_1.stl  Component8_Mirror__1.stl  Ellipse.dae  base_link.stl
robot_control/robot_control/: robot_kinematics.py
robot_control/urdf/: Robotic.trans  Robotic.xacro  surgical_robot.urdf
ros2_ws/src/robot_control/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/robot_control/config/: controller.yaml  urdf.rviz
ros2_ws/src/robot_control/launch/: display.launch.py  display_with_gui.launch.py  system.launch.py
ros2_ws/src/robot_control/meshes/: Component2_1.stl  Component5_1.stl  Component8_1.stl
(+29 files in other folders)
